--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : 
+title                    : ""
 title_separator          : "-"
 name                     : &name "Mati Ur Rehman"
 description              : &description "personal description"
