--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mati Ur Rehman"
   avatar           : "profile.png"
-  bio              : "PhD Student"
+  bio              : "PhD Student | Management Information Systems | Swinburne 2020 | LUMS 2017"
   location         :
   employer         :
   pubmed           : 
@@ -102,11 +102,11 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/matiurrehmanpk"
+  linkedin         : "matiurrehmanpk"
   orcid            : "https://orcid.org/0000-0002-5324-9550"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
   twitter          : "@ImMatiUrRehman"
