--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/     
+    url: https://matirehman.com/publications/     
     
   - title: "CV"
-    url: https://matirehman01.github.io/files/Mati_Ur Rehman-Curriculum_Vitae.pdf
+    url: https://matirehman.com/files/Mati_Ur Rehman-Curriculum_Vitae.pdf
     
 
