--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,6 @@ main:
     url: /publications/     
     
   - title: "CV"
-    url: matirehman01.github.io/files/Mati_Ur Rehman-Curriculum_Vitae.pdf
+    url: /files/Mati_Ur Rehman-Curriculum_Vitae.pdf
     
 
