--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Mati Ur Rehman"
-  avatar           : "/images/profile.png"
+  avatar           : "profile.png"
   bio              : "PhD Student | Management Information Systems | Swinburne 2020 | LUMS 2017"
   location         :
   employer         :
