--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Research"
-    url: /publications/     
+    url: /publication/     
     
   - title: "CV"
     url: /files/Mati_Ur Rehman-Curriculum_Vitae.pdf
