--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Mati Ur Rehman"
+title                    : "Mati Ur Rehman | Iowa State University"
 title_separator          : "-"
 name                     : &name ""
 description              : &description "Hi! I’m Mati, a Ph.D. student in Information Systems at Ivy College of Business, Iowa State University. My research focuses on examining how users interact with technological platforms, such as Facebook Marketplace and AI-based decision-making services."
