--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Mati Ur Rehman"
 title_separator          : "-"
-name                     : &name "- Iowa State University"
+name                     : &name ""
 description              : &description "Hi! I’m Mati, a Ph.D. student in Information Systems at Ivy College of Business, Iowa State University. My research focuses on examining how users interact with technological platforms, such as Facebook Marketplace and AI-based decision-making services."
 url                      : "https://matiurrehman.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
