--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mati Ur Rehman"
   avatar           : "profile.png"
-  bio              : "PhD Student | Management Information Systems | Swinburne 2020 | LUMS 2017"
+  bio              : "MIS PhD Candidate | Iowa State University 2026 | Swinburne 2020 | LUMS 2017"
   location         :
   employer         :
   pubmed           : 
